// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page <About /> Should render <About /> 1`] = `
<div>
  <div>
    <div
      class="jsx-1059402298"
    >
      <a
        class="jsx-1059402298"
        data-testid="link-home"
        href="/"
      >
        Home
      </a>
      <a
        class="jsx-1059402298"
        data-testid="link-about"
        href="/about"
      >
        About
      </a>
      <a
        class="jsx-1059402298"
        href="/resource/1"
      >
        Resource
      </a>
    </div>
    <p>
      About page
    </p>
  </div>
</div>
`;

exports[`Page <Index /> Should render <Index /> 1`] = `
<div>
  <div>
    <div
      class="jsx-1059402298"
    >
      <a
        class="jsx-1059402298"
        data-testid="link-home"
        href="/"
      >
        Home
      </a>
      <a
        class="jsx-1059402298"
        data-testid="link-about"
        href="/about"
      >
        About
      </a>
      <a
        class="jsx-1059402298"
        href="/resource/1"
      >
        Resource
      </a>
    </div>
    <p>
      Index page
    </p>
  </div>
</div>
`;
